Prevent literal words to wrap in lines.
Applies mostly on table columns

Reviewed-on: https://gerrit.libreoffice.org/c/help/+/156354
Tested-by: Jenkins

--- a/help3xsl/default.css
+++ b/help3xsl/default.css
@@ -125,6 +125,9 @@ pre,
     font-family: var(--font_mono);
     word-wrap: anywhere;
 }
+.literal {
+    white-space: nowrap;
+}
 .smathcode {
     border-radius: 2px;
     padding: 1px 3px;
